css/style.css
/* ... */
.title-style-1-wrap *,
.title-style-2-wrap * {
	display: inline-block;
}

.title-style-1 {
	letter-spacing: .075em;
	padding: 8px 20px 0;
	background: #016761;
	color: #ffffff;
}

.title-style-2 {
	text-transform: uppercase;
	letter-spacing: .4em;
	padding: 0 3px 0 10px;
	background: #ffffff;
}

.title-style-3 {
	text-transform: uppercase;
	letter-spacing: .4em;
	padding: 0 0 0 10px;
	color: #016761;
	text-shadow: 1px 1px #f8f0f0;
	font-weight: 600;
}

@media (min-width: 768px) {
	.title-style-2 {
		letter-spacing: .6em;
	}
}

* + .title-style-2-wrap {
	margin-top: 20px;
}

.title-style-2-wrap + .button {
	margin-top: 30px;
}

@media (min-width: 768px) {
	* + .title-style-2-wrap {
		margin-top: 32px;
	}
	.title-style-2-wrap + .button {
		margin-top: 50px;
	}
}

/*
* Brand
*/
.brand {
	display: inline-block;
}

.brand .brand-logo-light {
	display: none;
}

.brand .brand-logo-dark {
	display: block;
}

.brand .brand-logo-desktop {
	display: none;
}

@media (min-width: 992px) {
	.brand .brand-logo-desktop {
		display: block;
	}
	.brand .brand-logo-mobile {
		display: none;
	}
}

/*
* Links
*/
a {
	transition: all 0.3s ease-in-out;
}

a, a:focus, a:active, a:hover {
	text-decoration: none;
}

a, a:focus, a:active {
	color: #151515;
}

a:hover {
	color: #016761;
}

a[href*='tel'], a[href*='mailto'] {
	white-space: nowrap;
}

.link-hover {
	color: #016761;
}

.link-press {
	color: #016761;
}

.privacy-link {
	display: inline-block;
}

* + .privacy-link {
	margin-top: 40px;
}

.link-tag {
	display: inline-block;
	padding: 0 5px;
	font-size: 14px;
	line-height: 1.93;
	font-weight: 400;
	letter-spacing: .1em;
	font-family: "Questrial", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
	text-transform: uppercase;
}

.link-tag, .link-tag:active, .link-tag:focus {
	background: #016761;
}

.link-tag:hover {
	color: #ffffff;
	background: #111111;
}

/*
* Blocks
*/
.block-center, .block-sm, .block-lg {
	margin-left: auto;
	margin-right: auto;
}

.block-sm {
	max-width: 560px;
}

.block-lg {
	max-width: 768px;
}

.block-center {
	padding: 10px;
}

.block-center:hover .block-center-header {
	background-color: #016761;
}

.block-center-title {
	background-color: #ffffff;
}

@media (max-width: 1599.98px) {
	.block-center {
		padding: 20px;
	}
	.block-center:hover .block-center-header {
		background-color: #ffffff;
	}
	.block-center-header {
		background-color: #016761;
	}
}

/*
* Boxes
*/
.box-sm {
	max-width: 270px;
	margin-left: auto;
	margin-right: auto;
}

.box-md {
	max-width: 370px;
	margin-left: auto;
	margin-right: auto;
}

.box-lg {
	max-width: 470px;
	margin-left: auto;
	margin-right: auto;
}

.box-xl {
	max-width: 570px;
	margin-left: auto;
	margin-right: auto;
}

.box-xxl {
	max-width: 870px;
	margin-left: auto;
	margin-right: auto;
}

.team-classic {
	position: relative;
	text-align: center;
	transition: all .3s ease;
}

.team-classic img {
	width: 100%;
}

.team-classic-caption {
	display: flex;
	align-items: center;
	justify-content: center;
	position: absolute;
	padding: 15px 10px;
	right: 0;
	bottom: 20px;
	left: 0;
	transition: all .3s ease;
	pointer-events: none;
	background: rgba(253, 226, 49, 0.85);
}

.team-classic-caption > * {
	pointer-events: auto;
}

.team-classic-name {
	letter-spacing: .1em;
	text-transform: uppercase;
	transition: all .3s ease;
	will-change: transform;
}

.team-classic-name a:hover {
	color: rgba(17, 17, 17, 0.5);
}

.team-classic-status {
	letter-spacing: .2em;
	transition: all .3s ease;
}

.team-classic-list-social .icon {
	font-size: 16px;
	line-height: 1;
}

.team-classic-list-social a, .team-classic-list-social a:focus, .team-classic-list-social a:active {
	color: #111111;
}

.team-classic-list-social a:hover {
	color: rgba(17, 17, 17, 0.5);
}

* + .team-classic-list-social {
	margin-top: 6px;
}

@media (min-width: 992px) {
	.team-classic-caption {
		padding: 15px;
	}
	.team-classic-name {
		letter-spacing: .2em;
	}
}

@media (min-width: 992px) {
	.desktop .team-classic-caption {
		padding-top: 40px;
		top: 0;
		bottom: 0;
		background: transparent;
	}
	.desktop .team-classic-name {
		opacity: 0;
		transform: scale(1.2);
	}
	.desktop .team-classic-status {
		opacity: 0;
		transform: translate3d(0, 20px, 0);
	}
	.desktop .team-classic-list-social .icon {
		font-size: 18px;
	}
	.desktop .team-classic-list-social li {
		opacity: 0;
		transform: scale(0);
		transition: all .3s ease;
	}
	.desktop .team-classic:hover {
		box-shadow: 0 6px 24px 0 rgba(0, 0, 0, 0.15);
	}
	.desktop .team-classic:hover .team-classic-caption {
		background: rgba(253, 226, 49, 0.85);
	}
	.desktop .team-classic:hover .team-classic-list-social li,
	.desktop .team-classic:hover .team-classic-status,
	.desktop .team-classic:hover .team-classic-name {
		opacity: 1;
		transform: none;
	}
	.desktop .team-classic:hover .team-classic-list-social li:nth-child(1) {
		transition-delay: 50ms;
	}
	.desktop .team-classic:hover .team-classic-list-social li:nth-child(2) {
		transition-delay: 100ms;
	}
	.desktop .team-classic:hover .team-classic-list-social li:nth-child(3) {
		transition-delay: 150ms;
	}
	.desktop .team-classic:hover .team-classic-list-social li:nth-child(4) {
		transition-delay: 200ms;
	}
	.desktop .team-classic:hover .team-classic-list-social li:nth-child(5) {
		transition-delay: 250ms;
	}
	.desktop .team-classic:hover .team-classic-list-social li:nth-child(6) {
		transition-delay: 300ms;
	}
	.desktop .team-classic:hover .team-classic-list-social li:nth-child(7) {
		transition-delay: 350ms;
	}
	.desktop .team-classic:hover .team-classic-list-social li:nth-child(8) {
		transition-delay: 400ms;
	}
	.desktop .team-classic:hover .team-classic-list-social li:nth-child(9) {
		transition-delay: 450ms;
	}
	.desktop .team-classic:hover .team-classic-list-social li:nth-child(10) {
		transition-delay: 500ms;
	}
	.desktop * + .team-classic-status {
		margin-top: 8px;
	}
	.desktop * + .team-classic-list-social {
		margin-top: 35px;
	}
}
/* ... */

